Styling fix
movie and book images are overflowing into eachother, but only on the github pages version, not when i open the html file. fml. this might fix it

--- a/css/elijahcole_website.css
+++ b/css/elijahcole_website.css
@@ -145,7 +145,7 @@ main { /* Todo: consider depreciating vw for margin/padding. I think it might be
 	text-decoration: none;
 }
 
-.interests-image {
+#overrides-bootstrap .interests-image {
 	border-radius: 7px;
 	border-width: 5px;
 	border-color: #FFFCF9;
